
name:                jsonitron
version:             0.1.0.0

license:             MIT
license-file:        LICENSE
author:              Bill Casarin
maintainer:          bill@casarin.me


category:            System
build-type:          Simple
cabal-version:       >=1.8


executable jsonitron
  -- .hs or .lhs file containing the Main module.
  main-is: Jsonitron.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- Other library packages from which modules are imported.
  build-depends: base ==4.6.*
               , conduit ==0.5.*
               , mtl >= 2.1.2
               , aeson >= 0.6
               , bytestring >= 0.10
               , unordered-containers >= 0.2.3
               , optparse-applicative >= 0.5.2
               , blaze-builder >= 0.3.1
